fix: Fixed column so that they dont shift when clicking on the headers

--- a/frontend/src/styles/PriceList/PriceListTable.module.css
+++ b/frontend/src/styles/PriceList/PriceListTable.module.css
@@ -156,3 +156,7 @@
   align-items: center;
   transition: all 0.15s;
 }
+
+.sort-icon-hidden {
+  visibility: hidden;
+}
